# hashclock

./: .dockerignore  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  go.mod  main.go
.github/workflows/: bazel-cd.yaml  bazel-ci.yaml  build.yaml  docker-build.yaml  go.yaml  main.yaml  push.yaml
app/: BUILD.bazel  WORKSPACE  go.mod  go.sum  main.go
app/clock/: BUILD.bazel  clock.go  hash.go  hash_test.go  service.go  verify.go  verify_test.go
app/cmd/: BUILD.bazel  cmd.go
app/flags/: flags.go
clock/: BUILD.bazel  clock.go
cmd/: BUILD.bazel  cmd.go
flags/: BUILD.bazel  flags.go
