load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hashclock_lib",
    srcs = ["main.go"],
    importpath = "github.com/ZalgoNoise/hashclock",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "hashclock",
    embed = [":hashclock_lib"],
    visibility = ["//visibility:public"],
)
