load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clock",
    srcs = [
        "clock.go",
        "hash.go",
        "verify.go",
    ],
    importpath = "github.com/ZalgoNoise/hashclock/clock",
    visibility = ["//visibility:public"],
    deps = ["@com_github_zalgonoise_meta//crypto/hash"],
)

go_test(
    name = "clock_test",
    srcs = [
        "hash_test.go",
        "verify_test.go",
    ],
    args = ["-test.v"],
    embed = [":clock"],
    deps = ["@com_github_zalgonoise_meta//crypto/hash"],
)
